--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Nome dell'Evento</h1>
-    <p>Un'occasione imperdibile per imparare, connettersi e crescere!</p>
-  </header>
+<header>
+  <img src="evento.jpg" alt="Friends for Life" style="width: 100%; max-height: 400px; object-fit: cover;">
+</header>
 
   <main>
     <section id="details">
