--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <a href="#popup">
                     <img src="event-program.jpg" alt="Programma dell'evento">
                 </a>
-                <h2>Let's Make it Happen Together!</h2>
+                <h2>Friends for Life</h2>
             </div>
         </div>
         <div class="right-section">
@@ -154,7 +154,7 @@
                     <button type="submit">Invia Iscrizione</button>
                 </form>
                 <div class="footer">
-                    © 2025 Friends for Life. Tutti i diritti riservati.
+                    © 2025 Friends on the Lake. Tutti i diritti riservati.
                 </div>
             </div>
         </div>
